--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<form method="" action="">
 	<fieldset>
-		<legend> data pribadi </legend>
+		<legend> Data Pribadi </legend>
 	<table>
 	
 		<tr>
